--- a/css-bluehead-carosel/styles.css
+++ b/css-bluehead-carosel/styles.css
@@ -1,7 +1,12 @@
-#logoFingerprint, #logoText {
+#logoFingerprint,
+#logoText {
     position: absolute;
     top: 5px;
     z-index: 1;
+}
+
+#navButton {
+    display: none;
 }
 
 #logoFingerprint {
@@ -16,9 +21,15 @@
 }
 
 .contactButton {
-    background-color: rgb(74, 101, 255);
-    color: white;
-    margin-right: 3em;
+    background-color: white;
+    color: #004AAD;
+}
+
+.contactButton a::after {
+    height: 0;
+    width: 0;
+    left: 0;
+    bottom: 0;
 }
 
 .banner {
@@ -57,7 +68,7 @@
 
 .carosel {
     position: absolute;
-    top: 200px;
+    top: 15%;
     left: 0;
     width: 100%;
 }
@@ -65,16 +76,17 @@
 .cardsHolder {
     height: 40em;
     width: 100%;
-    max-width: 1200px;
     margin: auto;
     position: relative;
 }
 
-.carosel .left, .right {
+.carosel .left,
+.right {
     z-index: 1;
     position: absolute;
-    top: 35%;
-    padding: 80px 10px;
+    padding: 0 1em;
+    top: 15%;
+    height: 80%;
     background-color: inherit;
     border: 0;
     transition: 0.1s;
@@ -84,6 +96,7 @@
 .carosel button:hover {
     background-color: rgba(187, 187, 187, 0.5);
 }
+
 .carosel button:active {
     background-color: rgba(105, 105, 105, 0.5);
 }
@@ -97,20 +110,17 @@
 }
 
 .card {
-    color: black;
-    background-color: rgb(255, 255, 255);
     margin: auto;
     position: absolute;
     width: 100%;
     height: 100%;
     transition: 1.5s;
     opacity: 0;
-    border-radius: 3em;
-    box-shadow: 0 0 20px black;
 }
 
 .cardContent {
-    width: 100%;
+    margin: auto;
+    width: 70%;
     height: 100%;
     display: flex;
 }
@@ -122,6 +132,7 @@
 }
 
 .cardContent .text h2 {
+    color: #004AAD;
     position: absolute;
     top: 25%;
     font-size: 2em;
@@ -133,27 +144,28 @@
     font-size: 1.2em;
 }
 
-.cardContent .text button {
+.cardContent .text nav a {
     position: absolute;
     top: 75%;
-    padding: 1em 2em;
     background-color: inherit;
     letter-spacing: 2px;
     font-size: 0.9em;
-}
-
-
-.cardContent .text button:hover {
-    background-color: rgb(74, 101, 255);
+    padding: 1em 2em;
+    text-align: center;
+    border-radius: 1em;
+    box-shadow: none;
+    background-color: #004AAD;
     color: white;
-    cursor: pointer;
 }
 
-.cardContent img{
-    width: 20%;
+
+.cardContent img {
+    width: 40%;
+    max-height: 300px;
     margin: auto;
-    
+
 }
+
 .carosel #dots {
     color: white;
     display: flex;
@@ -164,7 +176,7 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    top: 39em;
+    top: 38em;
     z-index: 1;
 }
 
@@ -177,5 +189,101 @@
     margin: 0 0.5em;
     transition: 1s;
     margin: auto;
-  }
+}
 
+@media screen and (max-width: 70em) {
+
+    header nav {
+        display: none;
+    }
+
+    #navButton {
+        display: block;
+        width: 150px;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    #logoFingerprint {
+        width: 150px;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    #logoText {
+        width: 300px;
+        position: absolute;
+        top: 40px;
+        left: 150px;
+    }
+
+    .carosel {
+        top: 0;
+        height: 100%;
+    }
+
+    .cardsHolder {
+        top: 15%;
+        height: 100%;
+    }
+
+    .card {
+        position: absolute;
+
+    }
+
+    .card .text {
+        width: 100%;
+        margin: 0;
+    }
+
+    .card img {
+        display: none;
+    }
+
+    .carosel #dots {
+        top: 81%;
+        bottom: 0;
+        width: 15em;
+        height: 2em;
+        margin: 0;
+    }
+
+    .carosel .dot {
+        height: 30px;
+        width: 30px;
+    }
+
+    .carosel .left,
+    .right {
+        top: 76%;
+        bottom: 0;
+        height: 2em;
+        font-size: 5em;
+    }
+
+
+    .cardContent .text h2 {
+        position: relative;
+        top: 0;
+        font-size: 4em;
+    }
+
+    .cardContent .text p {
+        position: relative;
+        top: 0;
+        font-size: 3em;
+    }
+
+    .cardContent .text nav a {
+        position: absolute;
+        top: 70%;
+        font-size: 2em;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+
+}
