--- a/css-bluehead-carosel/stylesheet.css
+++ b/css-bluehead-carosel/stylesheet.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 
+html{
+    height: 100vh;
+    margin: 0;
+}
+
 body {
     font-family: 'Kanit', sans-serif;
     margin: 0;
     width: 100%;
-    background-color: black;
     overflow: hidden;
+    height: 100%;
 }
 
 main{
@@ -17,14 +22,15 @@ header {
     text-align: right;
     position: fixed;
     z-index: 1;
+    background-color: #004AAD;
+    color: white;
 }
 
 header nav {
     margin: auto;
     width: 100%;
-    padding: 2em;
-    box-shadow: 0 0 20px black;
-    background-color: rgba(255, 255, 255, 0.965);
+    box-shadow: 0 0 5px rgb(41, 41, 41);
+    padding: 2em 0;
 }
 
 header nav li {
@@ -33,5 +39,26 @@ header nav li {
     margin: 0 1em;
     padding: 0.5em 1.5em;
     border-radius: 1em;
+}
+
+nav a {
+    color: inherit;
+    text-decoration: none; 
+    position: relative;
+}
+
+nav a:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s;
+    background-color: #004AAD;
+}
+
+ nav a:hover:after { 
+    width: 100%
 }
 
