--- a/css/contact.css
+++ b/css/contact.css
@@ -1,50 +1,32 @@
-.banner {
-    height: 350px;
-    width: 100%;
-    display: none;
-}
-
-.banner h1 {
-    top: 130px;
-}
-
-.banner h2 {
-    top: 190px;
-}
-
-.banner p {
-    z-index: 1;
-    position: absolute;
-    top: 290px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-align: center;
-    width: 100%;
-    letter-spacing: 2px;
-    font-size: 1.5em;
-}
-
 footer {
     position: absolute;
     bottom: 0;
 }
 
-#contact {
-    padding: 1em;
-    width: 500px;
-    text-align: center;
-    margin: auto;
-    box-shadow: 0 0 5px rgb(181, 181, 181);
-    margin-top: 200px;
-}
 
+#contact {
+    width: 700px;
+    border-radius: 1em;
+    box-shadow: 0 0 5px rgb(55, 55, 55);
+    position: absolute;
+    top: 425px;
+    left: 50%;
+    transform: translate(-50%);
+    background-color: white;
+    text-align: center;
+    z-index: 1;
+    border-bottom: #004AAD 10px solid;
+}
 
 @media screen and (max-width: 800px) {
     #contact {
-        width: 100%;
-        padding: 1em 0;
-        box-shadow: 0 0 20px rgb(242, 242, 242);
-        margin-top: 100px;
+        top: 330px;
+        width: 70%;
+        padding: 10px;
+    }
+
+    .banner p {
+        top: 275px;
+        font-size: 1.5em;
     }
 }
