--- a/css/styles.css
+++ b/css/styles.css
@@ -283,9 +283,9 @@ footer {
     }
 
     .card {
-        margin: 0;
+        margin: 0 ;
         width: 100%;
-        padding: 1.5em 0;
+        padding: 2em 0;
         height: auto;
     }
 
@@ -293,7 +293,6 @@ footer {
         width: 90%;
         margin: auto;
         box-shadow: 0 0 15px rgb(239, 239, 239);
-        text-align: center;
         border-radius: 2em;
     }
 
@@ -328,7 +327,7 @@ footer {
         margin: auto;
         height: 400px;
         bottom: 0;
-        border-radius: 2em;
+        border-radius: 0;
         margin-top: 10px;
     }
 
@@ -339,7 +338,7 @@ footer {
         position: absolute;
         top: 0;
         left: 0;
-        border-radius: 2em;
+        border-radius: 0;
     }
 }
 
@@ -348,6 +347,6 @@ footer {
 
     .cardContent .imgHolderRight,
     .cardsHolder .imgHolderLeft {
-        height: 190px;
+        height: 200px;
     }
 }
