--- a/css/styles.css
+++ b/css/styles.css
@@ -44,12 +44,11 @@
     height: 500px;
     width: 100%;
     overflow: hidden;
-    top: 50px;
 }
 
 .banner img {
-    height: 100%;
-    min-width: 100%;
+    height: auto;
+    width: 100%;
 }
 
 
@@ -121,18 +120,13 @@
     margin: auto;
 }
 
-.cardsHolder {
-    position: relative;
-    width: 70%;
-    min-width: 1200px;
-    margin: auto;
-    margin-top: 150px;
-}
+
 
 .card {
     height: 400px;
+    max-width: 900px;
     overflow: hidden;
-    margin: 5em;
+    margin: 5em auto; 
     padding: 10px;
 }
 
@@ -140,6 +134,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    transition: 1s;
 }
 
 .cardContent .textLeft,
@@ -150,7 +145,8 @@
     width: 60%;
     margin: 75px 0;
     height: 250px;
-    box-shadow: 0 0 0.8em rgb(98, 98, 98);
+    box-shadow: 0 0 10px rgb(151, 151, 151);
+    border-radius: 2em;
 }
 
 .cardsHolder .textLeft {
@@ -179,6 +175,7 @@
     height: 100%;
     overflow: hidden;
     border-radius: 2em;
+    transition: 1s;
 
 }
 
@@ -246,6 +243,11 @@ footer {
         height: 400px;
     }
 
+    .banner img {
+        height: 100%;
+        width: 100%;
+    }
+
     .banner h1 {
         font-size: 3em;
         top: 150px
@@ -256,10 +258,13 @@ footer {
         top: 200px;
     }
 
+    .banner p {
+        top: 250px
+    }
+
     .qualifications {
         width: 250px;
         top: 280px;
-        font-size: 0.8em;
         height: auto;
         display: block;
     }
@@ -279,14 +284,15 @@ footer {
     .cardsHolder {
         width: 100%;
         min-width: 0;
-        margin-top: 140px;
+        margin-top: 180px;
     }
 
     .card {
-        margin: 0 ;
+        margin: 0 auto;
         width: 100%;
         padding: 2em 0;
         height: auto;
+        max-width: 600px;
     }
 
     .cardContent {
@@ -325,9 +331,9 @@ footer {
         position: relative;
         width: 100%;
         margin: auto;
-        height: 400px;
+        height: 350px;
         bottom: 0;
-        border-radius: 0;
+        border-radius: 0 0 2em 2em;
         margin-top: 10px;
     }
 
@@ -338,7 +344,7 @@ footer {
         position: absolute;
         top: 0;
         left: 0;
-        border-radius: 0;
+        border-radius: 0 0 2em 2em;
     }
 }
 
@@ -348,5 +354,11 @@ footer {
     .cardContent .imgHolderRight,
     .cardsHolder .imgHolderLeft {
         height: 200px;
+    }
+
+    .banner img {
+        height: 100%;
+        width: auto;
+
     }
 }
